--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,11 +1,11 @@
+# application-dev.yml
+server:
+  port: 8082
+
 spring:
   application:
-    name:ACTIVITY-SERVICE
+    name: ACTIVITY-SERVICE
 
   data:
     mongodb:
-      uri:mongodb://localhost:27017/fitnessactivity
-      database:fitnessactivity
-
-
-
+      uri: mongodb://localhost:27017/fitnessactivity
