--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -1,14 +1,17 @@
+
+
+
 # application-dev.yml
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
-    name: ACTIVITY-SERVICE
+    name: AI-SERVICE
 
   data:
     mongodb:
-      uri: mongodb://localhost:27017/fitnessactivity
+      uri: mongodb://localhost:27017/recommendations
 
 
 eureka:
