--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
 
   application:
     name: USER-SERVICE
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
