--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -13,6 +13,14 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/recommendations
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+
+
 
 eureka:
   client:
