--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -26,3 +26,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+
+gemini:
+  api:
+    key:${GEMINI_API_KEY}
+    url:${GEMINI_API_URL}
