--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -6,23 +6,5 @@ spring:
   application:
     name: ACTIVITY-SERVICE
 
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/fitnessactivity
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
-
-
-
-
+  config:
+    import: optional:configserver:http://localhost:8888
