--- a/aiservice/src/main/resources/application.yml
+++ b/aiservice/src/main/resources/application.yml
@@ -9,26 +9,5 @@ spring:
   application:
     name: AI-SERVICE
 
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/recommendations
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-
-
-
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
-
-gemini:
-  api:
-    key:${GEMINI_API_KEY}
-    url:${GEMINI_API_URL}
+  config:
+    import: optional:configserver:http://localhost:8888
