--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -1,24 +1,5 @@
-# application-dev.yml
-server:
-  port: 8081
-
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/fitness_user_db
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-
   application:
-    name: USER-SERVICE
-
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    name: user-service
+  config:
+    import: optional:configserver:http://localhost:8888
